Added data folder
containing super_client_info and database for mounting into docker

Change-Id: I2183d67cd3185f99f1ca4843ad26bd3aa5dcaf90